--- a/src/pages/report/report.css
+++ b/src/pages/report/report.css
@@ -101,9 +101,9 @@ select,
 	padding-left: 2rem;
 }
 
-input[type='text'] {
+/* input[type='text'] {
 	padding-left: 1rem;
-}
+} */
 
 #Affirm {
 	padding-left: 12em;
